--- a/struts/WebRoot/NewWishEdit.html
+++ b/struts/WebRoot/NewWishEdit.html
@@ -35,7 +35,7 @@
 
       <div class="jumbotron">
         <h1>编辑你的心愿！：</h1>
-    <textarea rows="10" cols="90" placeholder="在此处输入："></textarea>
+    <textarea  class="form-control" rows="10" cols="90" placeholder="在此处输入："></textarea>
     <p></p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">马上发布！</a></p>
       </div>
