--- a/struts/WebRoot/ManageWishes.html
+++ b/struts/WebRoot/ManageWishes.html
@@ -12,8 +12,6 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/ManageWishes.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
 
@@ -42,7 +40,8 @@
         <div class="list-group">
           <a href="#" class="list-group-item active">
             <h5 class="list-group-item-heading">2014.06.06<span class="badge">14</span></h5>
-            <p class="list-group-item-text">心愿内容1<span class="glyphicon glyphicon-search"></span></p>
+            <p class="list-group-item-text">心愿内容1</p>
+            <span class="glyphicon glyphicon-search"></span>
           </a>        
           <a href="#" class="list-group-item">
             <h5 class="list-group-item-heading">2014.06.05<span class="badge">30</span></h5>
