--- a/struts/WebRoot/ManageWishes.html
+++ b/struts/WebRoot/ManageWishes.html
@@ -39,22 +39,53 @@
       <div class="bs-example"> 
         <div class="list-group">
           <a href="#" class="list-group-item active">
-            <h5 class="list-group-item-heading">2014.06.06<span class="badge">14</span></h5>
-            <p class="list-group-item-text">心愿内容1</p>
-            <span class="glyphicon glyphicon-search"></span>
-          </a>        
+            <h5 class="list-group-item-heading">2014.06.06<br><span class="badge">14</span></h5>
+            <p class="list-group-item-text">心愿内容1Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+          </a> 
+          <button type="button" class="btn btn-default"> 
+            <span class="glyphicon glyphicon-remove"></span>删除
+          </button>
+          <button type="button" class="btn btn-default"> 
+            <span class="glyphicon glyphicon-pencil"></span>修改
+          </button>  
+          <p></p>   
+
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.05<span class="badge">30</span></h5>
-            <p class="list-group-item-text">心愿内容2</p>
+            <h5 class="list-group-item-heading">2014.06.05<br><span class="badge">30</span></h5>
+            <p class="list-group-item-text">心愿内容2Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
+          <button type="button" class="btn btn-default"> 
+            <span class="glyphicon glyphicon-remove"></span>删除
+          </button>
+          <button type="button" class="btn btn-default"> 
+            <span class="glyphicon glyphicon-pencil"></span>修改
+          </button>  
+          <p></p>   
+
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.04<span class="badge">21</span></h5>
-            <p class="list-group-item-text">心愿内容3</p>
+            <h5 class="list-group-item-heading">2014.06.04<br><span class="badge">21</span></h5>
+            <p class="list-group-item-text">心愿内容3Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
+          <button type="button" class="btn btn-default"> 
+            <span class="glyphicon glyphicon-remove"></span>删除
+          </button>
+          <button type="button" class="btn btn-default"> 
+            <span class="glyphicon glyphicon-pencil"></span>修改
+          </button>  
+          <p></p>   
+
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.03<span class="badge">7</span></h5>
-            <p class="list-group-item-text">心愿内容4</p>
+            <h5 class="list-group-item-heading">2014.06.03<br><span class="badge">7</span></h5>
+            <p class="list-group-item-text">心愿内容4Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
+          <button type="button" class="btn btn-default"> 
+            <span class="glyphicon glyphicon-remove"></span>删除
+          </button>
+          <button type="button" class="btn btn-default"> 
+            <span class="glyphicon glyphicon-pencil"></span>修改
+          </button>  
+          <p></p>   
+
         </div>
         </div>
       </div>
