--- a/struts/WebRoot/ManageWishes.html
+++ b/struts/WebRoot/ManageWishes.html
@@ -26,6 +26,19 @@
   </head>
 
   <body>
+    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+      <!-- <div class="container"> -->
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">你好！12345</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#">心愿墙</a></li>
+            <li class="active"><a href="NewWishEdit.html">发布心愿</a></li>
+            <li><a href="ManageWishes.html">管理心愿</a></li>
+          </ul>
+        </div><!-- /.nav-collapse -->
+    </div><!-- /.navbar -->
     <div class="container bs-docs-container">
       <div class="row">
         <div class="col-md-9" role="main">
@@ -36,64 +49,71 @@
 
       <h3>心愿列表：</h3>
       <p>Get three equal-width columns <strong>starting at desktops and scaling to large desktops</strong>. On mobile devices, tablets and below, the columns will automatically stack.</p>
-      <div class="bs-example"> 
-        <div class="list-group">
-          <a href="#" class="list-group-item active">
+      <div class="bs-example">
+
+        <div class="list-group" id="list-group">
+
+          <div id="001">
+          <a href="#" class="list-group-item">
             <h5 class="list-group-item-heading">2014.06.06<br><span class="badge">14</span></h5>
             <p class="list-group-item-text">心愿内容1Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a> 
-          <button type="button" class="btn btn-default"> 
+          <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
           <button type="button" class="btn btn-default"> 
             <span class="glyphicon glyphicon-pencil"></span>修改
           </button>  
           <p></p>   
-
+        </div>
+          <div id="002">
           <a href="#" class="list-group-item">
             <h5 class="list-group-item-heading">2014.06.05<br><span class="badge">30</span></h5>
             <p class="list-group-item-text">心愿内容2Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
-          <button type="button" class="btn btn-default"> 
+          <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
           <button type="button" class="btn btn-default"> 
             <span class="glyphicon glyphicon-pencil"></span>修改
           </button>  
           <p></p>   
-
+          </div>
+          <div id="003">
           <a href="#" class="list-group-item">
             <h5 class="list-group-item-heading">2014.06.04<br><span class="badge">21</span></h5>
             <p class="list-group-item-text">心愿内容3Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
-          <button type="button" class="btn btn-default"> 
+          <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
           <button type="button" class="btn btn-default"> 
             <span class="glyphicon glyphicon-pencil"></span>修改
           </button>  
           <p></p>   
-
+          </div>
+          <div id="004">
           <a href="#" class="list-group-item">
             <h5 class="list-group-item-heading">2014.06.03<br><span class="badge">7</span></h5>
             <p class="list-group-item-text">心愿内容4Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
-          <button type="button" class="btn btn-default"> 
+          <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
           <button type="button" class="btn btn-default"> 
             <span class="glyphicon glyphicon-pencil"></span>修改
           </button>  
           <p></p>   
-
+          </div>
         </div>
-        </div>
+      </div>
       </div>
       </div>
       </div>
     </div><!-- /container -->
 
-
+<script src="js/ButtonDelete.js">
+</script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
