--- a/struts/WebRoot/NewWishEdit.html
+++ b/struts/WebRoot/NewWishEdit.html
@@ -27,12 +27,21 @@
   </head>
 
   <body>
+<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+      <!-- <div class="container"> -->
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">你好！12345</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#">心愿墙</a></li>
+            <li class="active"><a href="NewWishEdit.html">发布心愿</a></li>
+            <li><a href="ManageWishes.html">管理心愿</a></li>
+          </ul>
+        </div><!-- /.nav-collapse -->
+    </div><!-- /.navbar -->
 
     <div class="container">
-      <div class="header">
-        <h3 class="text-muted">你好！12345</h3>
-      </div>
-
       <div class="jumbotron">
         <h1>编辑你的心愿！：</h1>
     <textarea  class="form-control" rows="10" cols="90" placeholder="在此处输入："></textarea>
