--- a/struts/WebRoot/ManageWishes.html
+++ b/struts/WebRoot/ManageWishes.html
@@ -34,8 +34,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="#">心愿墙</a></li>
-            <li class="active"><a href="NewWishEdit.html">发布心愿</a></li>
-            <li><a href="ManageWishes.html">管理心愿</a></li>
+            <li><a href="NewWishEdit.html">发布心愿</a></li>
+            <li class="active"><a href="ManageWishes.html">管理心愿</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
     </div><!-- /.navbar -->
