--- a/struts/WebRoot/ShowWishes.html
+++ b/struts/WebRoot/ShowWishes.html
@@ -16,6 +16,8 @@
     <!-- Custom styles for this template -->
     <link href="css/ShowWishes.css" rel="stylesheet">
 
+    <link href="css/buttons.css" rel="stylesheet">
+
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -28,18 +30,19 @@
 
   <body>
     <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">你好！12345</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">心愿墙</a></li>
+            <li class="active"><a href="ShowWishes.html">心愿墙</a></li>
             <li><a href="NewWishEdit.html">发布心愿</a></li>
             <li><a href="ManageWishes.html">管理心愿</a></li>
           </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="start.html">注销</a></li>
+          </ul>
         </div><!-- /.nav-collapse -->
-      </div><!-- /.container -->
     </div><!-- /.navbar -->
 
     <div class="container">
@@ -88,9 +91,12 @@
           </div><!--/row-->
         </div><!--/span-->
 
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-          
-        </div><!--/span-->
+        <div class="col-xs-3 sidebar-offcanvas">
+          <span class="button-wrap button-download">
+            <a class="button button-circle button-flat button-flat-primary glow" href="#">更多心愿
+            </a>
+          </span>
+        </div>
       </div><!--/row-->
 
       <hr>
