--- a/struts/WebRoot/ShowWishes.html
+++ b/struts/WebRoot/ShowWishes.html
@@ -49,7 +49,7 @@
 
       <div class="row row-offcanvas row-offcanvas-right">
 
-        <div class="col-xs-12 col-sm-9">
+        <div class="col-xs-12">
           <p class="pull-right visible-xs">
             <button type="button" class="btn btn-primary btn-xs" data-toggle="ShowWishes">Toggle nav</button>
           </p>
@@ -89,14 +89,21 @@
               <p><a class="btn btn-default" href="#" role="button">查看详情 &raquo;</a></p>
             </div><!--/span-->
           </div><!--/row-->
-        </div><!--/span-->
-
-        <div class="col-xs-3 sidebar-offcanvas">
+        
+          <div class="showmore">
           <span class="button-wrap button-download">
             <a class="button button-circle button-flat button-flat-primary glow" href="#">更多心愿
             </a>
           </span>
         </div>
+        </div><!--/span-->
+
+<!--         <div class="col-xs-3 sidebar-offcanvas">
+          <span class="button-wrap button-download">
+            <a class="button button-circle button-flat button-flat-primary glow" href="#">更多心愿
+            </a>
+          </span>
+        </div> -->
       </div><!--/row-->
 
       <hr>
