新增小纸条界面！

--- a/struts/WebRoot/ManageWishes.html
+++ b/struts/WebRoot/ManageWishes.html
@@ -54,8 +54,7 @@
       <p>Get three equal-width columns <strong>starting at desktops and scaling to large desktops</strong>. On mobile devices, tablets and below, the columns will automatically stack.</p>
       <div class="bs-example">
 
-        <div class="list-group" id="list-group">
-
+        <div class="list-group">
           <div id="001">
           <a href="#" class="list-group-item">
             <h5 class="list-group-item-heading">2014.06.06<br><span class="badge">14</span></h5>
