--- a/struts/WebRoot/ShowWishes.html
+++ b/struts/WebRoot/ShowWishes.html
@@ -61,32 +61,32 @@
             <div class="col-6 col-sm-6 col-lg-4">
               <h4>王远</h4>
               <p>我希望有同学能帮我写javaEE项目。</p>
-              <p><a class="btn btn-default" href="#" role="button">查看详情 &raquo;</a></p>
+              <p><a class="btn btn-default" href="PickUp.html" role="button">查看详情 &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h4>刘清</h4>
               <p>很想找一名同伴端午节去骑行。</p>
-              <p><a class="btn btn-default" href="#" role="button">查看详情 &raquo;</a></p>
+              <p><a class="btn btn-default" href="PickUp.html" role="button">查看详情 &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h4>周玉龙</h4>
               <p>想请一个认真、负责的同学帮我天梯上分。</p>
-              <p><a class="btn btn-default" href="#" role="button">查看详情 &raquo;</a></p>
+              <p><a class="btn btn-default" href="PickUp.html" role="button">查看详情 &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h4>郑乃豪</h4>
               <p>期末考试请枪手。</p>
-              <p><a class="btn btn-default" href="#" role="button">查看详情 &raquo;</a></p>
+              <p><a class="btn btn-default" href="PickUp.html" role="button">查看详情 &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h4>鲁优</h4>
               <p>我的心愿是让别的心愿都实现不了！</p>
-              <p><a class="btn btn-default" href="#" role="button">查看详情 &raquo;</a></p>
+              <p><a class="btn btn-default" href="PickUp.html" role="button">查看详情 &raquo;</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h4>时雨</h4>
               <p>希望有人能帮我带午饭。</p>
-              <p><a class="btn btn-default" href="#" role="button">查看详情 &raquo;</a></p>
+              <p><a class="btn btn-default" href="PickUp.html" role="button">查看详情 &raquo;</a></p>
             </div><!--/span-->
           </div><!--/row-->
         
