--- a/struts/WebRoot/start.html
+++ b/struts/WebRoot/start.html
@@ -187,5 +187,7 @@
     <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="../../assets/js/docs.min.js"></script>
+
+    <script src="InputCheck.js"></script>
   </body>
 </html>
