规范邮箱格式

--- a/struts/WebRoot/Signin.html
+++ b/struts/WebRoot/Signin.html
@@ -30,9 +30,9 @@
 
     <div class="container">
 
-      <form class="form-signin" role="form" onsubmit="return validate_form_email(this);" method="post" action="#">
+      <form class="form-signin" role="form" method="post">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <input name="user.email" type="text" class="form-control" placeholder="Email address" required autofocus>
+        <input name="user.email" type="email" class="form-control" placeholder="Email address" required autofocus>
         <input name="user.password" type="password" class="form-control" placeholder="Password" required>
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Remember me
