--- a/struts/WebRoot/SigninError.html
+++ b/struts/WebRoot/SigninError.html
@@ -31,7 +31,7 @@
     <div class="container">
 
       <form class="form-signin" role="form" method="post" >        <h2 class="form-signin-heading">Please sign in</h2>
-        <input name="user.email" type="text" class="form-control" placeholder="Email address" required autofocus>
+        <input name="user.email" type="email" class="form-control" placeholder="Email address" required autofocus>
         <input name="user.password" type="password" class="form-control" placeholder="Password" required>
         <font style="color:red">抱歉，账号或密码错误<br>请重新输入</font>
         <label class="checkbox">
