--- a/struts/WebRoot/start.html
+++ b/struts/WebRoot/start.html
@@ -80,7 +80,7 @@
           <h1>
           <form action="user/user!add" method="post">
           <div class="form-group">
-             <input name="userDTO.email" type="text" placeholder="电子邮件" class="form-control">          
+             <input name="userDTO.email" type="email" placeholder="电子邮件" class="form-control">          
           </div>
           <div class="form-group">
             <input name="userDTO.password" type="password" placeholder="密码" class="form-control">
