--- a/struts/WebRoot/start.html
+++ b/struts/WebRoot/start.html
@@ -78,7 +78,7 @@
           </div>
           <div class="col-md-4">
           <h1>
-          <form action="user/user!add" method="post">
+          <form action="user/user!add" method="post" onsubmit="return validate_form_repeat()">
           <div class="form-group">
              <input name="userDTO.email" type="email" placeholder="电子邮件" class="form-control">          
           </div>
@@ -188,6 +188,6 @@
     <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="../../assets/js/docs.min.js"></script>
 
-    <script src="InputCheck.js"></script>
+    <script src="js/InputCheck.js"></script>
   </body>
 </html>
