user db is done

--- a/struts/WebRoot/Signin.html
+++ b/struts/WebRoot/Signin.html
@@ -32,12 +32,12 @@
 
       <form class="form-signin" role="form" method="post">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <input name="user.email" type="email" class="form-control" placeholder="Email address" required autofocus>
+        <input name="user.name" type="email" class="form-control" placeholder="Email address" required autofocus>
         <input name="user.password" type="password" class="form-control" placeholder="Password" required>
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Remember me
         </label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" formaction="signin!signin">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" formaction="signin">Sign in</button>
       </form>
 
     </div> <!-- /container -->
