--- a/struts/WebRoot/ShowWishes.html
+++ b/struts/WebRoot/ShowWishes.html
@@ -92,18 +92,11 @@
         
           <div class="showmore">
           <span class="button-wrap button-download">
-            <a class="button button-circle button-flat button-flat-primary glow" href="#">更多心愿
+            <a class="button button-circle button-flat button-flat-primary glow" href="MoreWishes.html">更多心愿
             </a>
           </span>
         </div>
         </div><!--/span-->
-
-<!--         <div class="col-xs-3 sidebar-offcanvas">
-          <span class="button-wrap button-download">
-            <a class="button button-circle button-flat button-flat-primary glow" href="#">更多心愿
-            </a>
-          </span>
-        </div> -->
       </div><!--/row-->
 
       <hr>
