Manager system pages

--- a/struts/WebRoot/PIckUp.html
+++ b/struts/WebRoot/PIckUp.html
@@ -52,7 +52,7 @@
             <br>
             <!-- 以王远的心愿为例 -->
               <a class="list-group-item">
-                  <h5 class="list-group-item-heading">2014.06.06</h5>
+                  <h5 class="list-group-item-heading">2014.06.06</h5><br>
                   <p class="list-group-item-text">我希望有同学能帮我写javaEE项目。</p>
               </a> 
               <br><br><br>
