change button's position on ManagerShow.html

--- a/struts/WebRoot/ManagerShow.html
+++ b/struts/WebRoot/ManagerShow.html
@@ -55,10 +55,14 @@
           <div class="jumbotron">
             <h1>欢迎您管理员！</h1>
             <br><br><br><br><br><br>
-            <a href="ManageRecommend.html" class="button button-circle button-action">管理推荐</a>
+            <!-- <a href="ManageRecommend.html" class="button button-circle  button-primary">管理推荐</a>
             <font>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</font>
-            <a href="ManagerToManage.html" class="button button-circle button-action">管理心愿</a>
+            <a href="ManagerToManage.html" class="button button-circle  button-primary">管理心愿</a> -->
           </div>
+            <a href="ManageRecommend.html" class="button button-circle  button-primary">管理推荐</a>
+            <font>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</font>
+            <a href="ManagerToManage.html" class="button button-circle  button-primary">管理心愿</a>
+            <br><br><br>
           <div class="row">
             <div class="col-6 col-sm-6 col-lg-4">
               <h4>王远</h4>
