--- a/struts/WebRoot/ShowWishes.html
+++ b/struts/WebRoot/ShowWishes.html
@@ -37,7 +37,8 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="ShowWishes.html">心愿墙</a></li>
             <li><a href="NewWishEdit.html">发布心愿</a></li>
-            <li><a href="ManageWishes.html">管理心愿</a></li>
+            <li><a href="ManageWishes.html">发布过的</a></li>
+            <li><a href="#">拾起过的</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="start.html">注销</a></li>
