--- a/struts/WebRoot/PickedWishManage.html
+++ b/struts/WebRoot/PickedWishManage.html
@@ -8,10 +8,11 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>发布过的心愿！</title>
+    <title>拾起过的心愿！</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/ManageWishes.css" rel="stylesheet">
+    <link href="css/buttons.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
 
@@ -35,8 +36,8 @@
           <ul class="nav navbar-nav">
             <li><a href="ShowWishes.html">心愿墙</a></li>
             <li><a href="NewWishEdit.html">发布心愿</a></li>
-            <li class="active"><a href="ManageWishes.html">发布过的</a></li>
-            <li><a href="PickedWishManage.html">拾起过的</a></li>
+            <li><a href="ManageWishes.html">发布过的</a></li>
+            <li class="active"><a href="PickedWishManage.html">拾起过的</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="start.html">注销</a></li>
@@ -48,7 +49,7 @@
         <div class="col-md-9" role="main">
           <div class="bs-docs-section">
       <div class="page-header">
-        <h1>在这里管理你发布的心愿！</h1>
+        <h1>在这里管理你拾起的心愿！</h1>
       </div>
 
       <h3>心愿列表：</h3>
@@ -58,54 +59,54 @@
         <div class="list-group">
           <div id="001">
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.06<br><span class="badge">14</span></h5>
+            <h5 class="list-group-item-heading">2014.06.06<br></h5>
             <p class="list-group-item-text">心愿内容1Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a> 
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <button type="button" class="btn btn-default"> 
-            <span class="glyphicon glyphicon-pencil"></span>修改
-          </button>  
+          <a href="#" class="button button-rounded button-primary">
+            <span class="glyphicon glyphicon-earphone"></span>&nbsp与ta联线！
+          </a> 
           <p></p>   
         </div>
           <div id="002">
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.05<br><span class="badge">30</span></h5>
+            <h5 class="list-group-item-heading">2014.06.05<br></h5>
             <p class="list-group-item-text">心愿内容2Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <button type="button" class="btn btn-default"> 
-            <span class="glyphicon glyphicon-pencil"></span>修改
-          </button>  
+          <a href="#" class="button button-rounded button-primary">
+            <span class="glyphicon glyphicon-earphone"></span>&nbsp与ta联线！
+          </a> 
           <p></p>   
           </div>
           <div id="003">
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.04<br><span class="badge">21</span></h5>
+            <h5 class="list-group-item-heading">2014.06.04<br></h5>
             <p class="list-group-item-text">心愿内容3Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <button type="button" class="btn btn-default"> 
-            <span class="glyphicon glyphicon-pencil"></span>修改
-          </button>  
+          <a href="#" class="button button-rounded button-primary">
+            <span class="glyphicon glyphicon-earphone"></span>&nbsp与ta联线！
+          </a>  
           <p></p>   
           </div>
           <div id="004">
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.03<br><span class="badge">7</span></h5>
+            <h5 class="list-group-item-heading">2014.06.03<br></h5>
             <p class="list-group-item-text">心愿内容4Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <button type="button" class="btn btn-default"> 
-            <span class="glyphicon glyphicon-pencil"></span>修改
-          </button>  
+          <a href="#" class="button button-rounded button-primary">
+            <span class="glyphicon glyphicon-earphone"></span>&nbsp与ta联线！
+          </a>  
           <p></p>   
           </div>
         </div>
