--- a/struts/WebRoot/Contact.html
+++ b/struts/WebRoot/Contact.html
@@ -48,6 +48,7 @@
     <div class="container">
       <div class="jumbotron">
         <ul class="list-group">
+          <h3>历史消息</h3>
           <li class="list-group-item">你：<br>同学你好！你在吗？</li>
           <li class="list-group-item">ta：<br>你好，在的。</li>
           <li class="list-group-item">你：<br>我可以实现你的心愿，能给我你的联系方式吗</li>
