publisher and receiver can contact each other

--- a/struts/WebRoot/ManageWishes.html
+++ b/struts/WebRoot/ManageWishes.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/ManageWishes.css" rel="stylesheet">
+    <link href="css/buttons.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
 
@@ -58,54 +59,66 @@
         <div class="list-group">
           <div id="001">
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.06<br><span class="badge">14</span></h5>
+            <h5 class="list-group-item-heading">2014.06.06<br></h5>
             <p class="list-group-item-text">心愿内容1Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a> 
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <button type="button" class="btn btn-default"> 
+<!--           <button type="button" class="btn btn-default"> 
             <span class="glyphicon glyphicon-pencil"></span>修改
-          </button>  
+          </button> -->
+          <a href="ReadMessage.html" class="button button-rounded button-action">
+            <span class="glyphicon glyphicon-gift"></span>&nbsp阅读留言
+          </a>  
           <p></p>   
         </div>
           <div id="002">
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.05<br><span class="badge">30</span></h5>
+            <h5 class="list-group-item-heading">2014.06.05<br></h5>
             <p class="list-group-item-text">心愿内容2Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <button type="button" class="btn btn-default"> 
+<!--           <button type="button" class="btn btn-default"> 
             <span class="glyphicon glyphicon-pencil"></span>修改
-          </button>  
+          </button> -->  
+          <a href="ReadMessage.html" class="button button-rounded button-action">
+            <span class="glyphicon glyphicon-gift"></span>&nbsp阅读留言
+          </a> 
           <p></p>   
           </div>
           <div id="003">
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.04<br><span class="badge">21</span></h5>
+            <h5 class="list-group-item-heading">2014.06.04<br></h5>
             <p class="list-group-item-text">心愿内容3Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <button type="button" class="btn btn-default"> 
+<!--           <button type="button" class="btn btn-default"> 
             <span class="glyphicon glyphicon-pencil"></span>修改
-          </button>  
+          </button>  --> 
+          <a href="ReadMessage.html" class="button button-rounded button-action">
+            <span class="glyphicon glyphicon-gift"></span>&nbsp阅读留言
+          </a> 
           <p></p>   
           </div>
           <div id="004">
           <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">2014.06.03<br><span class="badge">7</span></h5>
+            <h5 class="list-group-item-heading">2014.06.03<br></h5>
             <p class="list-group-item-text">心愿内容4Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </a>
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <button type="button" class="btn btn-default"> 
+<!--           <button type="button" class="btn btn-default"> 
             <span class="glyphicon glyphicon-pencil"></span>修改
-          </button>  
+          </button>  --> 
+          <a href="ReadMessage.html" class="button button-rounded button-action">
+            <span class="glyphicon glyphicon-gift"></span>&nbsp阅读留言
+          </a> 
           <p></p>   
           </div>
         </div>
