--- a/struts/WebRoot/PickedWishManage.html
+++ b/struts/WebRoot/PickedWishManage.html
@@ -65,7 +65,7 @@
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <a href="#" class="button button-rounded button-primary">
+          <a href="Contact.html" class="button button-rounded button-primary">
             <span class="glyphicon glyphicon-earphone"></span>&nbsp与ta联线！
           </a> 
           <p></p>   
@@ -78,7 +78,7 @@
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <a href="#" class="button button-rounded button-primary">
+          <a href="Contact.html" class="button button-rounded button-primary">
             <span class="glyphicon glyphicon-earphone"></span>&nbsp与ta联线！
           </a> 
           <p></p>   
@@ -91,7 +91,7 @@
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <a href="#" class="button button-rounded button-primary">
+          <a href="Contact.html" class="button button-rounded button-primary">
             <span class="glyphicon glyphicon-earphone"></span>&nbsp与ta联线！
           </a>  
           <p></p>   
@@ -104,7 +104,7 @@
           <button type="button" class="btn btn-default" onclick="deleteWish(this.parentNode.id)"> 
             <span class="glyphicon glyphicon-remove"></span>删除
           </button>
-          <a href="#" class="button button-rounded button-primary">
+          <a href="Contact.html" class="button button-rounded button-primary">
             <span class="glyphicon glyphicon-earphone"></span>&nbsp与ta联线！
           </a>  
           <p></p>   
